--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+  @apply focus:outline-none focus:ring focus:ring-amber-500;
+}
+
+*::selection {
+  @apply bg-amber-100;
+}
