--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ a {
 }
 
 pre[class*='language-'] {
-  @apply p-8 m-0 rounded-xl border bg-gray-900  border-gray-800 dark:bg-gray-800 dark:border-gray-700  !important;
+  @apply p-4 sm:p-6 lg:p-8 m-0 rounded-xl border bg-gray-900  border-gray-800 dark:bg-gray-800 dark:border-gray-700  !important;
 }
 
 .token:is(.property, .tag, .constant, .symbol, .deleted) {
