--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,34 +8,38 @@ a {
   @apply focus:outline-none focus:ring focus:ring-amber-500;
 }
 
-pre[class*='language-'] {
-  @apply p-4 m-0 rounded-xl border bg-gray-900  border-gray-800 dark:bg-gray-800 dark:border-gray-700  !important;
+.prose pre[class*='language-'] {
+  @apply p-4 m-0 rounded-xl border bg-gray-900 border-gray-800 dark:bg-gray-800 dark:border-gray-700;
 }
 
-.token:is(.property, .tag, .constant, .symbol, .deleted) {
-  @apply text-red-400 !important;
+.prose .token:is(.property, .tag, .constant, .symbol, .deleted) {
+  @apply text-red-400;
 }
 
-.token:is(.selector, .attr-name, .string, .char, .builtin, .inserted) {
-  @apply text-yellow-400 !important;
+.prose .token:is(.selector, .attr-name, .string, .char, .builtin, .inserted) {
+  @apply text-yellow-400;
 }
 
-.token:is(.atrule, .attr-value, .function, .class-name) {
-  @apply text-green-400 !important;
+.prose .token:is(.atrule, .attr-value, .function, .class-name) {
+  @apply text-green-400;
 }
 
-.token:is(.comment, .prolog, .doctype, .cdata) {
-  @apply text-gray-400 !important;
+.prose .token:is(.comment, .prolog, .doctype, .cdata) {
+  @apply text-gray-400;
 }
 
-.token:is(.operator, .entity, .url, .variable) {
-  @apply text-white !important;
+.prose .token:is(.operator, .entity, .url, .variable) {
+  @apply text-white;
 }
 
-.token:is(.boolean, .number) {
-  @apply text-purple-400 !important;
+.prose .token:is(.boolean, .number) {
+  @apply text-purple-400;
 }
 
-.token.keyword {
-  @apply text-cyan-400 !important;
+.prose .token.keyword {
+  @apply text-cyan-400;
+}
+
+.prose pre + .prose-callout {
+  @apply mt-[1.7142857em];
 }
